prevent horizontal scrolling

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,11 @@ a {
 /************End Reset**************/
 
 /************Global**************/
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .rotate180 {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
